Fixed overflow

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,18 @@
 * {
     margin: 0;
     padding: 0;
+
 }
 
-
+h1 {
+    font-family:'Courier New', Courier, monospace;
+    font-weight: bolder;
+    font-style: italic;
+    border-bottom: 5px dotted white;
+}
 
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -59,6 +66,7 @@ button:hover {
   
 }
 [class*='content'] {
+    overflow: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
